--- a/src/views/pages/users/index.ejs
+++ b/src/views/pages/users/index.ejs
@@ -21,12 +21,12 @@
             <tbody>
                 <% for (let user of users) { %>
                     <tr>
-                        <td><%= user.id %></td>
+                        <td><%= user.user_id %></td>
                         <td><%= user.username %></td>
                         <td><%= user.email %></td>
                         <td>
-                            <a href="/users/<%= user.id %>/edit">Sửa</a>
-                            <form action="/users/<%= user.id %>?_method=DELETE" method="POST">
+                            <a href="/users/<%= user.user_id %>/edit">Sửa</a>
+                            <form action="/users/<%= user.user_id %>?_method=DELETE" method="POST">
                                 <button type="submit">Xóa</button>
                             </form>
                         </td>
